2008-04-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLargeClassesRule.cs: Fix string empty check.

2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidMessageChainsRule.cs: Use descriptive messages when report a
	violation.

2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidMessageChainsRule.cs: Trimming down several false positives.
	* Test/AviodMessageChainsTest.cs: Replaced tests with better ones.  The
	latest gives us a lot of false positives.
	
2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidMessageChainsRule.cs: Some fixes for avoid the exceptions in self
	test target.

2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidMessageChainsRule.cs: Implemented logic for detect chains created
	with local variables.  By the moment it's a bit constrained, only 5
	local variables and without reassignments.
	* Test/AvoidMessageChainsTest.cs: Added test for check chains created
	with local variables.

2008-04-26  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidMessageChainsRule.cs: New.  First rule in the Rule Day :)
	* Test/AvoidMessageChainsTest.cs: New.  Tests for AvoidMessageChains
	rule.
	* Makefile.am: Added both to the build.

2008-04-23  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidLongMethodsRule.cs: The C# compiler was optimized in order to
	reduce the number of instructions, and then this rule failed.  I have
	decremented the default MaxInstructions value, and all tests are passed
	successfully with the SVN HEAD and the 1.9 release.

2008-04-18  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLongParameterListsRule.cs: Implemented delegate checking.
	* Test/AvoidLongParameterListsRule.cs: Added tests for delegate special
	checking.

2008-04-18  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLongParameterListsRule.cs: Refactored to be a ITypeRule instead
	of IMethodRule.
	* Test/AvoidLongParameterListsRule.cs: Updated tests for the new